Feat: Add tabuleiro dinâmico

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
   <h1>Boas vindas ao Jogo da Velha</h1>
   <h2 id="infos">Clique em qualquer posição para começar a jogar</h2>
   <button id="start">Novo Jogo</button>
+  <div>
+    <span>Tamanho do tabuleiro:</span>
+    <input type="number" id="board-size" value="3" min="3" max="5">
+  </div>
   <div id="board">
 
-    <div class="position position-top position-left" line="1" column="1"></div>
+    <!-- <div class="position position-top position-left" line="1" column="1"></div>
     <div class="position position-top" line="1" column="2"></div>
     <div class="position position-top position-right" line="1" column="3"></div>
 
@@ -26,7 +30,7 @@
     <div class="position position-bottom position-left" line="3" column="1"></div>
     <div class="position position-bottom" line="3" column="2"></div>
     <div class="position position-bottom position-right" line="3" column="3"></div>
-  </div>
+  </div> -->
 
   <script src="script.js"></script>
 </body>
